fix service spacing

--- a/_sass/_service.scss
+++ b/_sass/_service.scss
@@ -1,3 +1,6 @@
+/*
+* service items
+*/
 $service-padding: 20px;
 
 .service {
@@ -13,21 +16,43 @@ $service-padding: 20px;
 }
 
 .service-body {
-  padding:    0;
+  overflow:   auto;
 }
 
 .service-item {
-  font-size:   16px;
-  font-weight: bold;
-  position: relative;
+  text-align:     left;
+  font-size:      16px;
   @include media-query($on-palm) {
-    font-size:  14px;
+    font-size:      14px;
   }
+  // float:          left !important;
+  overflow:       auto;
+  margin-top:     5px;
+  font-weight: bold;
 }
 
 .service-role {
-  color:        $primary-color-dark;
+  float:       left;
+  margin-left: auto;
+  margin-right: auto;
+  color:       $primary-color-dark;
+  width: -webkit-calc(30% - (#{$spacing-unit} / 2));
+  width:         calc(30% - (#{$spacing-unit} / 2));
+  @include media-query($on-palm) {
+    width: -webkit-calc(40% - (#{$spacing-unit} / 2));
+    width:         calc(40% - (#{$spacing-unit} / 2));
+    // margin-left: 40px;
+  }
 }
 
 .service-activity {
+  float:       left;
+  width: -webkit-calc(70% - (#{$spacing-unit} / 2));
+  width:         calc(70% - (#{$spacing-unit} / 2));
+  margin-left: 0px;
+  @include media-query($on-palm) {
+    width: -webkit-calc(60% - (#{$spacing-unit} / 2));
+    width:         calc(60% - (#{$spacing-unit} / 2));
+    // margin-left: 40px;
+  }
 }
