--- a/_sass/_teaching.scss
+++ b/_sass/_teaching.scss
@@ -35,15 +35,15 @@ $teaching-padding: 20px;
   float:       left;
   margin-left: auto;
   margin-right: auto;
-  width: -webkit-calc(25% - (#{$spacing-unit} / 2));
-  width:         calc(25% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(30% - (#{$spacing-unit} / 2));
+  width:         calc(30% - (#{$spacing-unit} / 2));
   color:       $primary-color-dark;
 }
 
 .teaching-course {
   float:       left;
-  width: -webkit-calc(75% - (#{$spacing-unit} / 2));
-  width:         calc(75% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(70% - (#{$spacing-unit} / 2));
+  width:         calc(70% - (#{$spacing-unit} / 2));
   margin-left: 0px;
   @include media-query($on-palm) {
     margin-left: 10px;
